@@ -1,17 +1,22 @@
-// Caret.h: interface for the CCaret class.
-//
-/////////////////////////////////////////////////////////////////////////////
-// Name:        caret.h
-// Purpose:     Show a cursor on the black terminal screen
-// Author:      PCMan (HZY)   http://pcman.ptt.cc/
-// E-mail:      pcman.tw@gmail.com
-// Created:		2004.7.17
-// Copyright:   (C) 2004 PCMan
-// Licence:     GPL : http://www.gnu.org/licenses/gpl.html
-// Modified by:
-//			Neversay(neversay.misher@gmail.com) Jan/18/2005
-/////////////////////////////////////////////////////////////////////////////
-
+/**
+ * caret.h: interface for the CCaret class.
+ *
+ * Copyright (c) 2004-2005 PCMan <pcman.tw@gmail.com>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ */
 
 #if !defined(PCMANX_CARET_H)
 #define PCMANX_CARET_H
